--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ input[type="file"] {
 
 #color-label {
   text-align: center;
-  color: #FFFF00;
+  color: #FFFFFF;
   text-shadow: -2.5px 2.5px 2px #000,
   2.5px 2.5px 2px #000,
   2.5px -2.5px 0 #000,
